gcc/testsuite/g++.dg/other/pr67065.C
// PR c++/67065

int main;  // { dg-error "cannot declare" }

void foo() { int main; }
